[package]
name = "zmap-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
env_logger = "0.11.3"
log = "0.4.21"
socket2 = "0.5.7"
rand = "0.8.5"
num = "0.4.2"
etherparse = "0.14"
eui48 = "1.0.1"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
affinity = "0.1.2"
